rawapi, binaries, users.getNearby

--- a/Sources/TestApp/App.config
+++ b/Sources/TestApp/App.config
@@ -3,4 +3,12 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
     </startup>
+  <appSettings>
+    <add key="OutPath" value="E:\files\kasth_000\Downloaded\Data\databases\vk_xml_2014_08_02\Dump"/>
+    <add key="start" value="1"/>
+    <add key="end" value="140000000"/>
+    <!--263756853-->
+    <add key="chunk" value="1000"/>
+    <add key="threads" value="25"/>
+  </appSettings>
 </configuration>
