--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -58,12 +58,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>RequestApi.tt</DependentUpon>
     </Compile>
+    <Compile Include="Api\Generated\RawApi.cs">
+      <DependentUpon>RawApi.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Api\Generated\VkApi.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>VkApi.tt</DependentUpon>
     </Compile>
     <Compile Include="Api\RequestApi.cs" />
+    <Compile Include="Api\RawApi.cs" />
     <Compile Include="Core\Entities\Onlines.cs" />
     <Compile Include="Core\Entities\Status.cs" />
     <Compile Include="Core\EntityParsers\Xml\OnlinesParser.cs" />
@@ -228,6 +234,10 @@
     <None Include="Api\Generated\RequestApi.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>RequestApi1.cs</LastGenOutput>
+    </None>
+    <None Include="Api\Generated\RawApi.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>RawApi.cs</LastGenOutput>
     </None>
     <None Include="Api\Generated\VkApi.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
