--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -72,18 +72,16 @@
     <Compile Include="Api\RawApi.cs" />
     <Compile Include="Core\Entities\Onlines.cs" />
     <Compile Include="Core\Entities\Status.cs" />
+    <Compile Include="Core\EntityParsers\Xml\EmptyParsers.cs" />
     <Compile Include="Core\EntityParsers\Xml\OnlinesParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\PhotosUploadServerParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\StatusParser.cs" />
+    <Compile Include="Core\ResponseEntities\AuthRestore.cs" />
     <Compile Include="Core\ResponseEntities\PhotosUploadServer.cs" />
+    <Compile Include="Core\ResponseEntities\RepostInfo.cs" />
     <Compile Include="Data\Parameters\SpecialAlbum.cs" />
     <Compile Include="Core\Entities\Counter.cs" />
     <Compile Include="Core\Entities\PhotoLikes.cs" />
-    <Compile Include="Core\EntityParsers\Xml\CounterParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\PhotoLikesParser.cs" />
     <Compile Include="Data\Parameters\FeedType.cs" />
     <Compile Include="Core\EntityFragments\GeoEntry.cs" />
-    <Compile Include="Core\EntityParsers\Xml\GeoEntryParser.cs" />
     <Compile Include="Data\Parameters\UsersSearchParams.cs" />
     <Compile Include="Data\Parameters\AudioSortOrder.cs" />
     <Compile Include="Core\Entities\City.cs" />
@@ -93,14 +91,8 @@
     <Compile Include="Core\Entities\MemberShip.cs" />
     <Compile Include="Core\Entities\StorageEntry.cs" />
     <Compile Include="Core\Entities\UserSubscriptions.cs" />
-    <Compile Include="Core\EntityParsers\Xml\ExportsParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\GroupCountersParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\LinkCheckResultParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\RelativeParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\StorageEntryParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\DatabaseEntryParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\LastSeenParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\LyricsParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\SimpleEntityParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\StructEntityParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\UserSubscriptionsParser.cs" />
@@ -114,16 +106,12 @@
     <Compile Include="Core\EntityFragments\LastSeen.cs" />
     <Compile Include="Core\EntityFragments\Exports.cs" />
     <Compile Include="Core\EntityParsers\Xml\DefaultParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\ProfilePhotosParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\SiteProfilesParser.cs" />
     <Compile Include="Core\Interfaces\IXmlVKEntityParser.cs" />
     <Compile Include="Data\Parameters\SearchSortOrder.cs" />
     <Compile Include="Api\Users.cs" />
     <Compile Include="Core\Entities\BanInfo.cs" />
     <Compile Include="Core\Entities\EntityList.cs" />
-    <Compile Include="Core\EntityParsers\Xml\BanInfoParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\EntityListParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\ProfileCountersParser.cs" />
     <Compile Include="Data\Api\VKPermission.cs" />
     <Compile Include="Data\Executors\IExecutor.cs" />
     <Compile Include="Data\Parameters\FriendSuggestionFilters.cs" />
@@ -158,40 +146,23 @@
     <Compile Include="Core\Entities\PostLikes.cs" />
     <Compile Include="Core\Entities\PostReposts.cs" />
     <Compile Include="Core\Entities\PostSource.cs" />
-    <Compile Include="Core\EntityParsers\Xml\CommentLikesParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\GraffityParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\NoteParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\PhotoAlbumParser.cs" />
     <Compile Include="Core\Enums\PrivacyType.cs" />
     <Compile Include="Core\EntityParsers\Xml\AttachmentParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\CommentParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\PostCommentsParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\PostedPhotoParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\PostRepostsParser.cs" />
     <Compile Include="Core\Enums\AttachmentType.cs" />
     <Compile Include="Core\Enums\PostSourceInfo.cs" />
     <Compile Include="Core\Entities\Privacy.cs" />
     <Compile Include="Core\Entities\Video.cs" />
     <Compile Include="Core\EntityParsers\Xml\AudioParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\DocumentParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\GeoParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\PostLikesParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\PostParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\PostSourceParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\PrivacyParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\VideoParser.cs" />
     <Compile Include="Core\Enums\AudioGenre.cs" />
     <Compile Include="Core\Entities\Group.cs" />
     <Compile Include="Core\Entities\Photo.cs" />
     <Compile Include="Core\EntityFragments\GroupCounters.cs" />
     <Compile Include="Core\Entities\Place.cs" />
-    <Compile Include="Core\EntityParsers\Xml\GroupParser.cs" />
     <Compile Include="Core\EntityParsers\Xml\PhotoParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\PlaceParser.cs" />
     <Compile Include="Core\Enums\GroupAdminLevel.cs" />
     <Compile Include="Core\Enums\PageType.cs" />
-    <Compile Include="Core\EntityParsers\Xml\SchoolParser.cs" />
-    <Compile Include="Core\EntityParsers\Xml\UniversityParser.cs" />
     <Compile Include="Core\Enums\PostSourceType.cs" />
     <Compile Include="Core\Enums\PostType.cs" />
     <Compile Include="Core\Enums\Relation.cs" />
@@ -213,7 +184,6 @@
     <Compile Include="Data\Api\VKToken.cs" />
     <Compile Include="Data\Parameters\WallPostFilter.cs" />
     <Compile Include="Core\EntityFragments\Occupation.cs" />
-    <Compile Include="Core\EntityParsers\Xml\OccupationParser.cs" />
     <Compile Include="Core\Enums\OccupationType.cs" />
     <Compile Include="Core\EntityFragments\StandInLife.cs" />
     <Compile Include="Core\Enums\PoliticalPreferences.cs" />
@@ -222,9 +192,7 @@
     <Compile Include="Core\Enums\Attitude.cs" />
     <Compile Include="Core\EntityParsers\Xml\StandInLifeParser.cs" />
     <Compile Include="Core\ResponseEntities\ConfirmResult.cs" />
-    <Compile Include="Core\EntityParsers\Xml\ConfirmResultParser.cs" />
     <Compile Include="Core\Entities\Link.cs" />
-    <Compile Include="Core\EntityParsers\Xml\LinkParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Api\Generated\ImplementedMethods.tt">
