--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -237,9 +237,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ImplementedMethods.tt</DependentUpon>
     </Content>
-    <Content Include="Api\Generated\VKSharpFuncs.xml">
-      <SubType>Designer</SubType>
-    </Content>
+    <Content Include="Api\Generated\VkSharpFuncs.xml" />
   </ItemGroup>
   <Import Project="packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
