--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -81,7 +81,6 @@
     <Compile Include="Core\ResponseEntities\PhotosUploadServer.cs" />
     <Compile Include="Core\ResponseEntities\RepostInfo.cs" />
     <Compile Include="Data\Executors\JsonExecutor.cs" />
-    <Compile Include="Helpers\ProxyPoolingHttpClientHandler.cs" />
     <Compile Include="Data\Parameters\ContentId.cs" />
     <Compile Include="Data\Parameters\GroupFields.cs" />
     <Compile Include="Data\Parameters\SpecialAlbum.cs" />
@@ -119,7 +118,9 @@
     <Compile Include="Data\Parameters\NameCase.cs" />
     <Compile Include="Data\Parameters\UserFields.cs" />
     <Compile Include="Helpers\Exceptions\VKException.cs" />
+    <Compile Include="Helpers\HttpClientHandler.cs" />
     <Compile Include="Helpers\MiscTools.cs" />
+    <Compile Include="Helpers\MorozovHandler.cs" />
     <Compile Include="Helpers\UploadHelper.cs" />
     <Compile Include="Api\VKApi.cs" />
     <Compile Include="Core\Entities\Attachment.cs" />
