--- a/Sources/VKSharp/VKSharp.csproj
+++ b/Sources/VKSharp/VKSharp.csproj
@@ -80,6 +80,8 @@
     <Compile Include="ReturnTypes\Entities\Status.cs" />
     <Compile Include="ReturnTypes\Entities\VideoAlbum.cs" />
     <Compile Include="ReturnTypes\Enums\ChangeNameStatus.cs" />
+    <Compile Include="ReturnTypes\Enums\MessageReadState.cs" />
+    <Compile Include="ReturnTypes\Enums\MessageType.cs" />
     <Compile Include="ReturnTypes\Enums\ResolvedItemType.cs" />
     <Compile Include="ReturnTypes\ResponseEntities\AccountInfo.cs" />
     <Compile Include="ReturnTypes\ResponseEntities\AuthRestore.cs" />
@@ -186,6 +188,7 @@
     <Compile Include="ReturnTypes\Enums\Attitude.cs" />
     <Compile Include="ReturnTypes\ResponseEntities\ConfirmResult.cs" />
     <Compile Include="ReturnTypes\Entities\Link.cs" />
+    <Compile Include="ReturnTypes\ResponseEntities\WallPostResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Api\Generated\ImplementedMethods.tt">
@@ -230,7 +233,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ImplementedMethods.tt</DependentUpon>
     </None>
-    <None Include="Api\Generated\VkSharpFuncs.xml" />
+    <None Include="Api\Generated\VkSharpFuncs.xml">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libs\JsonNet\Newtonsoft.Json.csproj">
