--- a/Sources/Samples/Old/TestApp/TestApp.csproj
+++ b/Sources/Samples/Old/TestApp/TestApp.csproj
@@ -41,7 +41,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ConTools">
-      <HintPath>..\..\Libs\ConTools.dll</HintPath>
+      <HintPath>..\..\..\..\Libs\ConTools.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
