--- a/Sources/Samples/Old/TestApp/TestApp.csproj
+++ b/Sources/Samples/Old/TestApp/TestApp.csproj
@@ -35,9 +35,13 @@
     <LangVersion>6</LangVersion>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>
+    </ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ConTools">
-      <HintPath>..\..\Libs\ConTools.dll</HintPath>
+      <HintPath>..\..\..\..\Libs\ConTools.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -55,10 +59,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VKSharp\VKSharp.csproj">
+    <ProjectReference Include="..\..\..\VKSharp\VKSharp.csproj">
       <Project>{E30B8CEF-DC6F-4A66-B92E-CB608D5DADE8}</Project>
       <Name>VKSharp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="favicon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
